added env variable for hiding secret information

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,23 +1,17 @@
 spring.application.name=Blog-Project
-
 #this is for offline data base
-
 server.port=8081
-spring.mvc.hiddenmethod.filter.enabled=true
-spring.datasource.url=jdbc:postgresql://localhost:5432/blogProject
-spring.datasource.username=postgres
-spring.datasource.password=7496
+spring.datasource.url=${DATASOURCE_URL}
+spring.datasource.username=${DATASOURCE_USERNAME}
+spring.datasource.password=${DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-
-
+spring.mvc.hiddenmethod.filter.enabled=true
 #This for cloud_database
-
 #spring.datasource.url=jdbc:postgresql://dpg-crht9sjtq21c7382n0lg-a:5432/blog_project_postgres
 #spring.datasource.username=blog_project_postgres_user
 #spring.datasource.password=hLpD78VrC9tVDs3j1u4CJxOumSXaLplJ
-
 # JPA and Hibernate Configuration
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
